--- a/02_Demand_Estimation/output/chap5_blp.tex
+++ b/02_Demand_Estimation/output/chap5_blp.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-13}Estimates of The Parameters}
+\caption{Estimates of The Parameters}
 \centering
 \begin{tabular}[t]{l|l|c}
 \hline
