--- a/02_Demand_Estimation/output/chap5_mc_2016.tex
+++ b/02_Demand_Estimation/output/chap5_mc_2016.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-15}Predicted Marginal Costs}
+\caption{Predicted Marginal Costs}
 \centering
 \begin{tabular}[t]{c|c|c|c|c}
 \hline
