--- a/02_Demand_Estimation/output/chap5_merger_welfare.tex
+++ b/02_Demand_Estimation/output/chap5_merger_welfare.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-35}Consumer Surplus and Welfare}
+\caption{Consumer Surplus and Welfare}
 \centering
 \begin{tabular}[t]{c|c|c}
 \hline
