--- a/02_Demand_Estimation/output/chap5_merger_change_mc.tex
+++ b/02_Demand_Estimation/output/chap5_merger_change_mc.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-30}Percent Reduction in Marginal Costs Required for No Change in Predicted Postmerger Prices}
+\caption{Percent Reduction in Marginal Costs Required for No Change in Predicted Postmerger Prices}
 \centering
 \begin{tabular}[t]{c|c|c|c}
 \hline
