--- a/02_Demand_Estimation/output/chap5_merger_change_p_q.tex
+++ b/02_Demand_Estimation/output/chap5_merger_change_p_q.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-27}Predicted Percent Change in Prices and Quantities as a Result of Mergers}
+\caption{Predicted Percent Change in Prices and Quantities as a Result of Mergers}
 \centering
 \begin{tabular}[t]{c|c|c|c|c|c}
 \hline
