--- a/02_Demand_Estimation/output/chap5_appendix_merger_mc.tex
+++ b/02_Demand_Estimation/output/chap5_appendix_merger_mc.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-43}Cost Reduction (Percent)}
+\caption{Cost Reduction (Percent)}
 \centering
 \begin{tabular}[t]{c|c|c}
 \hline
