--- a/02_Demand_Estimation/output/chap5_appendix_merger_revenue.tex
+++ b/02_Demand_Estimation/output/chap5_appendix_merger_revenue.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{\label{tab:unnamed-chunk-44}Change in Profits and Revenues}
+\caption{Change in Profits and Revenues}
 \centering
 \begin{tabular}[t]{c|c|c|c|c}
 \hline
